kubernetes/background-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kubernetes-lab
  name: study-kubernetes-background-app
  labels:
    app: study-kubernetes-background-deployment
spec:
  replicas: 2  # nesse exemplo duas replicas serão executadas
  selector:
    matchLabels:
      app: study-kubernetes-background-api
  template: #Pod Template: aqui configuramos o blueprint do pod que o deployment irá gerenciar
    metadata:
      labels:
        app: study-kubernetes-background-api
    spec:
      containers:
        - name: study-kubernetes-background-container
          image: background-run-api:study
          ports:
            - containerPort: 9000
          livenessProbe:
            exec:
              command:
                - cat
                - kubernetes-liveness.txt
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
