kubernetes/background-api/clusterIp.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: kubernetes-lab
  name: study-kubernetes-background-cluster-ip
  labels:
    app: study-kubernetes-background-service
spec:
  ports:
    - port: 9200
      targetPort: 9000
      protocol: TCP
  selector:
    app: study-kubernetes-background-api
